--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
         }
     },
     "require": {
-        "php": ">=5.6",
-        "ext-mecab": "*"
+        "php": ">=5.6"
     },
     "scripts": {
         "test": "phpunit"
